fix button spacing

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1{
 }
 div.container{
     position: fixed;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -47,5 +47,5 @@ div.container{
 
 }
 .buttons{
-    margin: 3em;
+    margin-left: 3em;
 }
